fixed padding for main on smaller designs

--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -14,9 +14,9 @@ header, footer{
 }
 
 main{
-    padding-left: 50px;
     padding-bottom: 20px;
     padding-top: 20px;
+    padding-left: 10px;
 }
 
 h1{
