--- a/portal/css/medium.css
+++ b/portal/css/medium.css
@@ -2,7 +2,12 @@
     #profilepic{
         float: right;
     }
+
     h1{
         padding-left: 75px;
+    }
+
+    main{
+        padding-left: 50px;
     }
 }
